# ironarm

./: .envrc  .gitignore  AGENT.md  Cargo.toml  MUJOCO_LOG.TXT  README.md  flake.nix  justfile
.agents/skills/bevy-hot-reload/: SKILL.md
.agents/skills/ironarm-debug/: SKILL.md
.agents/skills/sim-test-loop/: SKILL.md
.cargo/: config.toml
.deepseek/: instructions.md
.zed/: settings.json
apps/cu_balancebot/: .gitignore  README.md  copperconfig.ron  index.html  justfile
apps/cu_balancebot/src/: sim_driver.rs
ironarm_cli/: Cargo.toml  copperconfig.ron
ironarm_cli/src/: main.rs  messages.rs
ironarm_cli/src/tasks/: joint_driver.rs
ironarm_core/: Cargo.toml  README.md
ironarm_core/src/: clock.rs  collision.rs  ik.rs  ik_geo.rs  interpolation.rs  lib.rs  math.rs  messages.rs  motion.rs  state.rs  trajectory.rs
ironarm_core/src/ik_geo/: fk.rs  mat.rs  math.rs  solver.rs  subprobs.rs  types.rs  vec.rs
ironarm_core/src/tasks/: ik_solver.rs  joint_driver.rs  joint_interpolator.rs  mod.rs  motion_planner.rs  state_sink.rs
ironarm_core/tests/: interpolator_test.rs
ironarm_logreader/: Cargo.toml
ironarm_logreader/src/: main.rs
ironarm_model/: Cargo.toml  build.rs  ironarm.xml  ur5e.xml
ironarm_model/src/: lib.rs
ironarm_resim/: Cargo.toml
ironarm_resim/src/: main.rs
ironarm_resim/src/tasks/: mod.rs
ironarm_sim/: Cargo.toml  README.md  copperconfig.ron  justfile  main.py  pyproject.toml  pyrightconfig.json
ironarm_sim/assets/: arm_config.ron  motion.rhai
ironarm_sim/models/: ironarm.xml
ironarm_sim/rust_core/: Cargo.toml
ironarm_sim/rust_core/src/: lib.rs
ironarm_sim/src/: app.py  arm_config.rs  colors.py  headless_render.py  headless_test.py  main.py  main.rs  messages.rs  motion.rs  pty.py
ironarm_sim/src/arm/: model.py  view.py
ironarm_sim/src/tasks/: mod.rs
ironarm_sim/src/terminal/: widget.py
ironarm_sim/src/world/: mod.rs
ironarm_sim/typings/mujoco/: __init__.pyi
ironarm_std/: Cargo.toml  README.md  copperconfig.ron
ironarm_std/examples/: check.rs
ironarm_std/src/: lib.rs  ringbuf.rs  shared_state.rs  trajectory.rs
ironarm_std/src/tasks/: joint_driver.rs  joint_interpolator.rs  mod.rs  motion_planner.rs  state_sink.rs
ironarm_std/tests/: trajectory_ik_test.rs
ironarm_std/trajectories/: ellipse.rhai  lissajous.rhai  main.rhai
ironarm_tui/: Cargo.toml
ironarm_tui/src/: main.rs
references/cu_rp_balancebot/: .gitignore  Cargo.toml  README.md  copperconfig.ron  index.html  justfile
references/cu_rp_balancebot/.codewhale/: instructions.md
references/cu_rp_balancebot/etc/: 99-gpio.rules  99-pwm-permissions.rules  99-spi-permissions.rules  raspberrypi.rules
references/cu_rp_balancebot/src/: bevymon.rs  logreader.rs  main.rs  motor_model.rs  resim.rs  sim.rs  sim_driver.rs  tasks.rs  windowing.rs
references/cu_rp_balancebot/src/world/: mod.rs
robot_arm/: Cargo.toml  copperconfig.ron
robot_arm/src/: main.rs  messages.rs
robot_arm/src/tasks/: mod.rs
