[workspace]
members = ["ironarm_tui", "ironarm_core", "ironarm_sim", "ironarm_std"]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
cu29 = { git = "https://github.com/copper-project/copper-rs.git", branch = "master", features = ["sysclock-perf", "reflect"] }
cu29-traits = { git = "https://github.com/copper-project/copper-rs.git", branch = "master", features = ["reflect"] }
cu-consolemon = { git = "https://github.com/copper-project/copper-rs.git", branch = "master" }
bincode = { package = "cu-bincode", version = "2.0", default-features = false, features = ["derive", "alloc"] }
serde = { version = "1.0", features = ["derive"] }
bevy = { version = "0.18.0", default-features = false, features = [
  "x11",
  "default_font",
  "bevy_render",
  "bevy_window",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_scene",
  "bevy_sprite",
  "bevy_gltf",
  "gltf_animation",
  "tonemapping_luts",
  "bevy_ui",
  "bevy_ui_render",
  "ktx2",
  "jpeg",
  "png",
  "zstd_rust",
  "trace",
  "reflect_auto_register",
] }
avian3d = { version = "0.6.1", default-features = false, features = ["f32", "3d", "parallel", "xpbd_joints", "parry-f32"] }
