[package]
name = "ironarm_cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
default-run = "ironarm_cli"

[[bin]]
name = "ironarm_cli"
path = "src/main.rs"

[dependencies]
cu29 = { git = "https://github.com/copper-project/copper-rs.git", branch = "master" }
cu-consolemon = { git = "https://github.com/copper-project/copper-rs.git", branch = "master" }
bincode = { package = "cu-bincode", version = "2.0", default-features = false, features = ["derive", "alloc"] }
serde = { version = "1.0", features = ["derive"] }
