[package]
name = "ironarm_core"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[lib]
name = "ironarm_core"
path = "src/lib.rs"

[features]
default = ["std"]
std = ["dep:cu29", "dep:cu29-traits", "dep:bevy_reflect"]

[dependencies]
cu29 = { workspace = true, optional = true }
cu29-traits = { workspace = true, optional = true }
bevy_reflect = { version = "0.18", optional = true }
bincode = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = "1.0"
