[package]
name = "ironarm_core"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[lib]
name = "ironarm_core"
path = "src/lib.rs"

[features]
default = []
std = ["cu29/reflect", "dep:cu29-traits", "dep:bevy_reflect"]

[dependencies]
ironarm_model = { path = "../ironarm_model" }
cu29 = { git = "https://github.com/copper-project/copper-rs.git", branch = "master", default-features = false }
cu29-traits = { workspace = true, optional = true }
bevy_reflect = { version = "0.18", optional = true }
bincode = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = "1.0"
