[package]
name = "ironarm_logreader"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[[bin]]
name = "ironarm_logreader"
path = "src/main.rs"

[dependencies]
ironarm_core = { path = "../ironarm_core" }
ironarm_std = { path = "../ironarm_std" }
cu29 = { workspace = true }
cu29-export = { workspace = true }
