[package]
name = "ironarm_sim"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
default-run = "ironarm_sim"

[[bin]]
name = "ironarm_sim"
path = "src/main.rs"

[dependencies]
ironarm_core = { path = "../ironarm_core" }
ironarm_std = { path = "../ironarm_std" }
cu29 = { workspace = true }
bevy = { workspace = true }
avian3d = { workspace = true }
ron = "0.8"
serde = { workspace = true }
rhai = { version = "1.25.1", features = ["sync", "f32_float"] }
