[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ironarm_sim"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "mujoco>=3.9.0",
    "numpy>=2",
    "pyside6>=6.11.1",
]


[tool.maturin]
module-name = "ironarm_sim"
manifest-path = "rust_core/Cargo.toml"

[dependency-groups]
dev = [
    "maturin>=1.13.3",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]

[tool.mypy]
ignore_missing_imports = true
